BaSP-2022: Image overlap fix in About section

--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -50,11 +50,10 @@ textarea{
     justify-content: space-between;
 }
 .two-column .about:first-child{
-    margin-right: 25px;
+    margin-right: 20px;
 }
 .about, .about-us{
-    flex: 0 1 auto;
-    width: 48%;
+    flex: 0 1 48%;
 }
 .about h1 {
     margin-bottom: 20px;
